# insightforge

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: routes.py
app/core/: analyzer.py  database.py
app/templates/: base.html  index.html  order.html  order_status.html  report.html
docs/: fiverr-listing.md  launch-posts.md  upwork-listing.md  upwork-proposals.md  upwork-ready-proposals.md
scripts/: generate_report.py  upwork_monitor.py
